--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=12.x"
+  },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000",
+    "start": "tsc && vite build && vite preview --port 3000"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.17.0",
