--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "handlebars": "4.7.8",
+    "sass": "^1.69.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-handlebars": "^1.6.0"
