--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/ban-ts-comment": "off",
+        // "@typescript-eslint/ban-ts-comment": "off",
         "indent": ["error", "tab"],
         "quotes": [2, "single", { "avoidEscape": true }],
         "eol-last": ["error", "always"],
