--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview --port 3000",
-    "start": "tsc && vite build && vite preview --port 3000"
+    "start": "tsc && vite build && vite preview --port 3000",
+    "eslint": "eslint ./src --fix",
+    "stylelint": "stylelint \"**/*.{css, scss}\" --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.17.0",
@@ -18,8 +20,15 @@
     "eslint": "^8.56.0",
     "handlebars": "4.7.8",
     "sass": "^1.69.7",
+    "stylelint": "^16.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-handlebars": "^1.6.0"
+  },
+  "dependencies": {
+    "eslint-config-airbnb-base": "^15.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-scss": "^6.0.0",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
