--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,6 +85,11 @@
                 "ts": "never",
                 "tsx": "never"
             }
-        ]
+        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/no-explicit-any": ["warn"],
+        "no-underscore-dangle": "off",
+        "class-methods-use-this": "off"
     }
 }
