--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
+    "nanoid": "^5.0.4",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-scss": "^6.0.0",
     "vite-plugin-checker": "^0.6.2"
